examples/test/testpolicy7768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7768
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key30: value22
      key0: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value35
          key20: value22
      podSelector:
        matchLabels:
          key38: value29
